@@ -10,6 +10,10 @@ vim: spelllang=en spell
 
 Version 1.5.0:
 
+* Distributed clocks:
+    - Delay calculation.
+    - Synchronize the reference clock to the master clock.
+* Read alias from register 0x0012 instead of SII.
 * Output link state in 'ethercat master'.
 * Finish library implementation.
 * Re-work EoE code.
@@ -22,12 +26,10 @@ Version 1.5.0:
 * Check force_config flag before error.
 * Remove allow_scanning flag.
 * Test File access over EtherCAT (FoE) reading.
-* Distributed clocks.
 * Implement ecrt_master_slave() in kernel space.
 * Check for ioctl() interface version.
 * Improve application-triggered SDO transfers by moving the statemachine into
   the SDO handlers.
-* FoE in application interface?
 * Apply watchdog patches from J. Mohre.
 
 Future issues:
